--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             justify-content: center; */
 
         }
+    @media (max-width:480px){
+        .messages{
+            font-size: 12px;
+        }
+    }
         .messages{
             display: flex;
             flex-direction: column;
