--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <style>
         /* @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap'); */
         
-        body{
-            /* background-color: black; */
+        @media (max-width:480px) {
+            .messages {
+                font-size: 12px !important; 
+            }
         }
         .but{
             font-size: 45px;
@@ -16,22 +18,18 @@
             justify-content: center; */
 
         }
-    @media (max-width:480px){
-        .messages{
-            font-size: 12px;
-        }
-    }
-        .messages{
+        .messages {
             display: flex;
             flex-direction: column;
             gap: 70px;
             height: 100vh;
             align-items: center;
-            justify-content:center;
+            justify-content: center;
             color: green;
             font-size: 70px;
-            font-family:'Courier New', Courier, monospace;
+            font-family: 'Courier New', Courier, monospace;
         }
+
         .image{
             height: 90vh;
             width: 100vw;
